--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -52,8 +52,8 @@ jobs:
       - name: Trigger deployment
         run: |
           REF=$(echo ${GITHUB_SHA} | cut -c -8)
-          DATA='{"ref":"master","inputs":{"name":"'${NAME}'","digest":"'${DIGEST}'","ref":"'${REF}'"}}'
-          echo ${DATA}
+          MSG=https://github.com/UARENForecasting/${{ github.event.repository.name }}/commit/${{ github.sha }}
+          DATA='{"ref":"master","inputs":{"name":"'${NAME}'","digest":"'${DIGEST}'","ref":"'${REF}'","msg":"'"${MSG}"'"}}'          echo ${DATA}
           curl \
           -X POST \
           -H "Accept: application/vnd.github.v3+json" \
