--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -53,7 +53,8 @@ jobs:
         run: |
           REF=$(echo ${GITHUB_SHA} | cut -c -8)
           MSG=https://github.com/UARENForecasting/${{ github.event.repository.name }}/commit/${{ github.sha }}
-          DATA='{"ref":"master","inputs":{"name":"'${NAME}'","digest":"'${DIGEST}'","ref":"'${REF}'","msg":"'"${MSG}"'"}}'          echo ${DATA}
+          DATA='{"ref":"master","inputs":{"name":"'${NAME}'","digest":"'${DIGEST}'","ref":"'${REF}'","msg":"'"${MSG}"'"}}'          
+          echo ${DATA}
           curl \
           -X POST \
           -H "Accept: application/vnd.github.v3+json" \
